--- a/karriar/index.html
+++ b/karriar/index.html
@@ -2074,7 +2074,15 @@ $('.swiper-button-prev,.swiper-button-next').remove();
                 slidesPerView: 3,
                 spaceBetween: 30
             },
+            767: {
+                slidesPerView: 2,
+                spaceBetween: 20
+            },
             480: {
+                slidesPerView: 1,
+                spaceBetween: 10
+            },
+            300: {
                 slidesPerView: 1,
                 spaceBetween: 10
             }
