--- a/cases/flower-shop/index.html
+++ b/cases/flower-shop/index.html
@@ -403,7 +403,7 @@
                <div class="Headerstyle__Header-sc-11sf5xg-0 gzTbnY">
                   <div class="Headerstyle__Container-sc-11sf5xg-1 kuxhvl">
                      <div class="Headerstyle__Bar-sc-11sf5xg-2 gtppHt"></div>
-                     <a href="index.html">
+                     <a href="/index.html">
                           <div data-gatsby-image-wrapper="" class="gatsby-image-wrapper Headerstyle__NewLogo-sc-11sf5xg-3 jRognm">
                            <div aria-hidden="true" style="padding-top:49.548736462093856%"></div>
                            <div aria-hidden="true" data-placeholder-image="" style="opacity:1;transition:opacity 500ms linear;object-fit:contain"></div>
@@ -412,7 +412,7 @@
                            </picture>     
                         </div>
                      </a>
-                     <a href="kontakta-oss/index.html" target="" class="Headerstyle__Cta-sc-11sf5xg-17 hvhSAY">Kontakta oss</a>
+                     <a href="../../kontakta-oss/index.html" target="" class="Headerstyle__Cta-sc-11sf5xg-17 hvhSAY">Kontakta oss</a>
                      <div class="Headerstyle__Hamburger-sc-11sf5xg-4 dzplXw">
                         <div class="Headerstyle__Line-sc-11sf5xg-5 cXmmPm"></div>
                         <div class="Headerstyle__Line-sc-11sf5xg-5 cXmmPm"></div>
@@ -429,10 +429,10 @@
                         </div>
                         <nav class="Headerstyle__SidebarMenu-sc-11sf5xg-10 jRIAJq">
                            <div class="Headerstyle__MenuGroupsContainer-sc-11sf5xg-11 dIYqnB">
-                              <div class="Headerstyle__MenuGroupWrapper-sc-11sf5xg-12 dwPtvC"><a sublink="false" class="Headerstyle__NewNav-sc-11sf5xg-13 cUOlTa" href="index.html#">Vår expertis</a><a href="vara-tjanster/apputveckling/index.html" sublink="true" class="Headerstyle__NewNav-sc-11sf5xg-13 bYcoqu">Apputveckling</a><a href="vara-tjanster/webbutveckling/index.html" sublink="true" class="Headerstyle__NewNav-sc-11sf5xg-13 bYcoqu">Webbutveckling</a><a href="vara-tjanster/automatisering-integrationer/index.html" sublink="true" class="Headerstyle__NewNav-sc-11sf5xg-13 bYcoqu">Automatisering, integrationer & AI</a><a href="vara-tjanster/cyber-security/index.html" sublink="true" class="Headerstyle__NewNav-sc-11sf5xg-13 bYcoqu">Cybersäkerhet</a></div>
-                              <div class="Headerstyle__MenuGroupWrapper-sc-11sf5xg-12 dwPtvC"><a href="vara-tjanster/index.html" sublink="false" class="Headerstyle__NewNav-sc-11sf5xg-13 cUOlTa">Våra tjänster</a><a href="vara-tjanster/starta-ett-projekt/index.html" sublink="true" class="Headerstyle__NewNav-sc-11sf5xg-13 bYcoqu">Starta ett projekt</a></div>
+                              <div class="Headerstyle__MenuGroupWrapper-sc-11sf5xg-12 dwPtvC"><a sublink="false" class="Headerstyle__NewNav-sc-11sf5xg-13 cUOlTa" href="/index.html">Vår expertis</a><a href="../../vara-tjanster/apputveckling/index.html" sublink="true" class="Headerstyle__NewNav-sc-11sf5xg-13 bYcoqu">Apputveckling</a><a href="../../vara-tjanster/webbutveckling/index.html" sublink="true" class="Headerstyle__NewNav-sc-11sf5xg-13 bYcoqu">Webbutveckling</a><a href="../../vara-tjanster/automatisering-integrationer/index.html" sublink="true" class="Headerstyle__NewNav-sc-11sf5xg-13 bYcoqu">Automatisering, integrationer & AI</a><a href="../../vara-tjanster/cyber-security/index.html" sublink="true" class="Headerstyle__NewNav-sc-11sf5xg-13 bYcoqu">Cybersäkerhet</a></div>
+                              <div class="Headerstyle__MenuGroupWrapper-sc-11sf5xg-12 dwPtvC"><a href="../../vara-tjanster/index.html" sublink="false" class="Headerstyle__NewNav-sc-11sf5xg-13 cUOlTa">Våra tjänster</a><a href="../../vara-tjanster/starta-ett-projekt/index.html" sublink="true" class="Headerstyle__NewNav-sc-11sf5xg-13 bYcoqu">Starta ett projekt</a></div>
                            </div>
-                           <a href="om-oss/index.html" sublink="false" class="Headerstyle__NewNav-sc-11sf5xg-13 cUOlTa">Om oss</a><a href="cases/index.html" sublink="false" class="Headerstyle__NewNav-sc-11sf5xg-13 cUOlTa">Cases</a><a href="kontakta-oss/index.html" sublink="false" class="Headerstyle__NewNav-sc-11sf5xg-13 cUOlTa">Kontakt</a>
+                           <a href="../../om-oss/index.html" sublink="false" class="Headerstyle__NewNav-sc-11sf5xg-13 cUOlTa">Om oss</a><a href="cases/index.html" sublink="false" class="Headerstyle__NewNav-sc-11sf5xg-13 cUOlTa">Cases</a><a href="../../kontakta-oss/index.html" sublink="false" class="Headerstyle__NewNav-sc-11sf5xg-13 cUOlTa">Kontakt</a>
                            <div class="SideContactFormstyled__Container-sc-xpl7fe-0 gNFoLC">
                               <div color="#0C3A53;Default" class="SideContactFormstyled__Button-sc-xpl7fe-1 jbaOBC">
                                  Boka introduktionsmöte<!-- --> 
@@ -716,43 +716,31 @@
                            <div class="Footerstyle__ListContainer-sc-3wf7fx-4 cLDhLc">
                               <h5 class="text__heading_sm-sc-1xracbr-5 Footerstyle__Subheader-sc-3wf7fx-5 iehGeS dhFszc">Vår expertis</h5>
                               <div class="Footerstyle__LinkContainer-sc-3wf7fx-6 fcPhxw">
-                                 <div class="Footerstyle__LinkWrapper-sc-3wf7fx-7 cBuxex"><a href="vara-tjanster/apputveckling/index.html" target="" class="Footerstyle__FooterLink-sc-3wf7fx-8 fOHICr">Apputveckling</a></div>
-                                 <div class="Footerstyle__LinkWrapper-sc-3wf7fx-7 cBuxex"><a href="vara-tjanster/webbutveckling/index.html" target="" class="Footerstyle__FooterLink-sc-3wf7fx-8 fOHICr">Webbutveckling</a></div>
-                                 <div class="Footerstyle__LinkWrapper-sc-3wf7fx-7 cBuxex"><a href="vara-tjanster/automatisering-integrationer/index.html" target="" class="Footerstyle__FooterLink-sc-3wf7fx-8 fOHICr">Automatisering, integrationer & AI</a></div>
-                                 <div class="Footerstyle__LinkWrapper-sc-3wf7fx-7 cBuxex"><a href="vara-tjanster/cyber-security/index.html" target="" class="Footerstyle__FooterLink-sc-3wf7fx-8 fOHICr">Cybersäkerhet</a></div>
+                                 <div class="Footerstyle__LinkWrapper-sc-3wf7fx-7 cBuxex"><a href="../../vara-tjanster/apputveckling/index.html" target="" class="Footerstyle__FooterLink-sc-3wf7fx-8 fOHICr">Apputveckling</a></div>
+                                 <div class="Footerstyle__LinkWrapper-sc-3wf7fx-7 cBuxex"><a href="../../vara-tjanster/webbutveckling/index.html" target="" class="Footerstyle__FooterLink-sc-3wf7fx-8 fOHICr">Webbutveckling</a></div>
+                                 <div class="Footerstyle__LinkWrapper-sc-3wf7fx-7 cBuxex"><a href="../../vara-tjanster/automatisering-integrationer/index.html" target="" class="Footerstyle__FooterLink-sc-3wf7fx-8 fOHICr">Automatisering, integrationer & AI</a></div>
+                                 <div class="Footerstyle__LinkWrapper-sc-3wf7fx-7 cBuxex"><a href="../../vara-tjanster/cyber-security/index.html" target="" class="Footerstyle__FooterLink-sc-3wf7fx-8 fOHICr">Cybersäkerhet</a></div>
                               </div>
                            </div>
                            <div class="Footerstyle__ListContainer-sc-3wf7fx-4 cLDhLc">
                               <h5 class="text__heading_sm-sc-1xracbr-5 Footerstyle__Subheader-sc-3wf7fx-5 iehGeS dhFszc">Våra tjänster</h5>
                               <div class="Footerstyle__LinkContainer-sc-3wf7fx-6 fcPhxw">
-                                 <div class="Footerstyle__LinkWrapper-sc-3wf7fx-7 cBuxex"><a href="vara-tjanster/starta-ett-projekt/index.html" target="" class="Footerstyle__FooterLink-sc-3wf7fx-8 fOHICr">Starta ett projekt</a></div>
+                                 <div class="Footerstyle__LinkWrapper-sc-3wf7fx-7 cBuxex"><a href="../../vara-tjanster/starta-ett-projekt/index.html" target="" class="Footerstyle__FooterLink-sc-3wf7fx-8 fOHICr">Starta ett projekt</a></div>
                               </div>
                            </div>
                            <div class="Footerstyle__ListContainer-sc-3wf7fx-4 cLDhLc">
                               <h5 class="text__heading_sm-sc-1xracbr-5 Footerstyle__Subheader-sc-3wf7fx-5 iehGeS dhFszc">Om oss</h5>
                               <div class="Footerstyle__LinkContainer-sc-3wf7fx-6 fcPhxw">
-                                 <div class="Footerstyle__LinkWrapper-sc-3wf7fx-7 cBuxex"><a href="om-oss/index.html" target="" class="Footerstyle__FooterLink-sc-3wf7fx-8 fOHICr">Om oss</a></div>
-                                 <div class="Footerstyle__LinkWrapper-sc-3wf7fx-7 cBuxex"><a href="cases/index.html" target="" class="Footerstyle__FooterLink-sc-3wf7fx-8 fOHICr">Våra case</a></div>
-                                 <div class="Footerstyle__LinkWrapper-sc-3wf7fx-7 cBuxex"><a href="kontakta-oss/index.html" target="" class="Footerstyle__FooterLink-sc-3wf7fx-8 fOHICr">Kontakt</a></div>
+                                 <div class="Footerstyle__LinkWrapper-sc-3wf7fx-7 cBuxex"><a href="../../om-oss/index.html" target="" class="Footerstyle__FooterLink-sc-3wf7fx-8 fOHICr">Om oss</a></div>
+                                 <div class="Footerstyle__LinkWrapper-sc-3wf7fx-7 cBuxex"><a href="../../cases/index.html" target="" class="Footerstyle__FooterLink-sc-3wf7fx-8 fOHICr">Våra case</a></div>
+                                 <div class="Footerstyle__LinkWrapper-sc-3wf7fx-7 cBuxex"><a href="../../kontakta-oss/index.html" target="" class="Footerstyle__FooterLink-sc-3wf7fx-8 fOHICr">Kontakt</a></div>
                               </div>
                            </div>
                         </div>
                         <div class="Footerstyle__Contact-sc-3wf7fx-10 cNTzuO">
                            <a aria-current="page" class="" href="index.html">
-                              <div data-gatsby-image-wrapper="" class="gatsby-image-wrapper Footerstyle__NewLogo-sc-3wf7fx-12 iKrTqn">
-                                 <div aria-hidden="true" style="padding-top:49.548736462093856%"></div>
-                                 <div aria-hidden="true" data-placeholder-image="" style="opacity:1;transition:opacity 500ms linear"></div>
-                                 <picture>
-                                    <source type="image/webp" data-srcset="/static/96e8f50d8f8bcbd6557b1ee283cae303/c8a45/Pasver_logo-original_white.webp 750w,/static/96e8f50d8f8bcbd6557b1ee283cae303/6c34b/Pasver_logo-original_white.webp 1080w,/static/96e8f50d8f8bcbd6557b1ee283cae303/f7c88/Pasver_logo-original_white.webp 1108w" sizes="100vw"/>
-                                    <img data-gatsby-image-ssr="" data-main-image="" style="opacity:0" sizes="100vw" decoding="async" loading="lazy" data-src="/static/96e8f50d8f8bcbd6557b1ee283cae303/b167f/Pasver_logo-original_white.png" data-srcset="/static/96e8f50d8f8bcbd6557b1ee283cae303/f1e7c/Pasver_logo-original_white.png 750w,/static/96e8f50d8f8bcbd6557b1ee283cae303/b3f4e/Pasver_logo-original_white.png 1080w,/static/96e8f50d8f8bcbd6557b1ee283cae303/b167f/Pasver_logo-original_white.png 1108w" alt="logo"/>
-                                 </picture>
-                                 <noscript>
-                                    <picture>
-                                       <source type="image/webp" srcSet="/static/96e8f50d8f8bcbd6557b1ee283cae303/c8a45/Pasver_logo-original_white.webp 750w,/static/96e8f50d8f8bcbd6557b1ee283cae303/6c34b/Pasver_logo-original_white.webp 1080w,/static/96e8f50d8f8bcbd6557b1ee283cae303/f7c88/Pasver_logo-original_white.webp 1108w" sizes="100vw"/>
-                                       <img data-gatsby-image-ssr="" data-main-image="" style="opacity:0" sizes="100vw" decoding="async" loading="lazy" src="static/96e8f50d8f8bcbd6557b1ee283cae303/b167f/Pasver_logo-original_white.png" srcSet="static/96e8f50d8f8bcbd6557b1ee283cae303/f1e7c/Pasver_logo-original_white.png 750w,static/96e8f50d8f8bcbd6557b1ee283cae303/b3f4e/Pasver_logo-original_white.png 1080w,static/96e8f50d8f8bcbd6557b1ee283cae303/b167f/Pasver_logo-original_white.png 1108w" alt="logo"/>
-                                    </picture>
-                                 </noscript>
-                                 <script type="module">const t="undefined"!=typeof HTMLImageElement&&"loading"in HTMLImageElement.prototype;if(t){const t=document.querySelectorAll("img[data-main-image]");for(let e of t){e.dataset.src&&(e.setAttribute("src",e.dataset.src),e.removeAttribute("data-src")),e.dataset.srcset&&(e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset"));const t=e.parentNode.querySelectorAll("source[data-srcset]");for(let e of t)e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset");e.complete&&(e.style.opacity=1,e.parentNode.parentNode.querySelector("[data-placeholder-image]").style.opacity=0)}}</script>
+                              <div class="">          
+                                 <img src="/Images/logo.png" alt="" style="height: 100px;width: 200px;object-fit: contain;">                  
                               </div>
                            </a>
                            <div class="Footerstyle__Info-sc-3wf7fx-11 cZMlzJ">
