--- a/vara-tjanster/apputveckling/index.html
+++ b/vara-tjanster/apputveckling/index.html
@@ -864,20 +864,8 @@
                         </div>
                         <div class="Footerstyle__Contact-sc-3wf7fx-10 cNTzuO">
                            <a href="../../index.html">
-                              <div data-gatsby-image-wrapper="" class="gatsby-image-wrapper Footerstyle__NewLogo-sc-3wf7fx-12 iKrTqn">
-                                 <div aria-hidden="true" style="padding-top:49.548736462093856%"></div>
-                                 <div aria-hidden="true" data-placeholder-image="" style="opacity:1;transition:opacity 500ms linear"></div>
-                                 <picture>
-                                    <source type="image/webp" data-srcset="/static/96e8f50d8f8bcbd6557b1ee283cae303/c8a45/Pasver_logo-original_white.webp 750w,/static/96e8f50d8f8bcbd6557b1ee283cae303/6c34b/Pasver_logo-original_white.webp 1080w,/static/96e8f50d8f8bcbd6557b1ee283cae303/f7c88/Pasver_logo-original_white.webp 1108w" sizes="100vw"/>
-                                    <img data-gatsby-image-ssr="" data-main-image="" style="opacity:0" sizes="100vw" decoding="async" loading="lazy" data-src="/static/96e8f50d8f8bcbd6557b1ee283cae303/b167f/Pasver_logo-original_white.png" data-srcset="/static/96e8f50d8f8bcbd6557b1ee283cae303/f1e7c/Pasver_logo-original_white.png 750w,/static/96e8f50d8f8bcbd6557b1ee283cae303/b3f4e/Pasver_logo-original_white.png 1080w,/static/96e8f50d8f8bcbd6557b1ee283cae303/b167f/Pasver_logo-original_white.png 1108w" alt="logo"/>
-                                 </picture>
-                                 <noscript>
-                                    <picture>
-                                       <source type="image/webp" srcSet="/static/96e8f50d8f8bcbd6557b1ee283cae303/c8a45/Pasver_logo-original_white.webp 750w,/static/96e8f50d8f8bcbd6557b1ee283cae303/6c34b/Pasver_logo-original_white.webp 1080w,/static/96e8f50d8f8bcbd6557b1ee283cae303/f7c88/Pasver_logo-original_white.webp 1108w" sizes="100vw"/>
-                                       <img data-gatsby-image-ssr="" data-main-image="" style="opacity:0" sizes="100vw" decoding="async" loading="lazy" src="../../static/96e8f50d8f8bcbd6557b1ee283cae303/b167f/Pasver_logo-original_white.png" srcSet="../../static/96e8f50d8f8bcbd6557b1ee283cae303/f1e7c/Pasver_logo-original_white.png 750w,../../static/96e8f50d8f8bcbd6557b1ee283cae303/b3f4e/Pasver_logo-original_white.png 1080w,../../static/96e8f50d8f8bcbd6557b1ee283cae303/b167f/Pasver_logo-original_white.png 1108w" alt="logo"/>
-                                    </picture>
-                                 </noscript>
-                                 <script type="module">const t="undefined"!=typeof HTMLImageElement&&"loading"in HTMLImageElement.prototype;if(t){const t=document.querySelectorAll("img[data-main-image]");for(let e of t){e.dataset.src&&(e.setAttribute("src",e.dataset.src),e.removeAttribute("data-src")),e.dataset.srcset&&(e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset"));const t=e.parentNode.querySelectorAll("source[data-srcset]");for(let e of t)e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset");e.complete&&(e.style.opacity=1,e.parentNode.parentNode.querySelector("[data-placeholder-image]").style.opacity=0)}}</script>
+                             <div class="">          
+                                 <img src="/Images/logo.png" alt="" style="height: 100px;width: 200px;object-fit: contain;">                  
                               </div>
                            </a>
                            <div class="Footerstyle__Info-sc-3wf7fx-11 cZMlzJ">
