--- a/vara-tjanster/cyber-security/index.html
+++ b/vara-tjanster/cyber-security/index.html
@@ -837,26 +837,23 @@
                          <h2 class="text__heading_xl-sc-1xracbr-2 contactFormContentstyle__Header-sc-1wvwxzl-3 dDQFpA GuKcz">Önskar du ytterligare information?</h2>
                          <p class="text__paragraph-sc-1xracbr-7 contactFormContentstyle__Paragraph-sc-1wvwxzl-4 kITvjv bBiTzt">Söker du någon som kan vägleda dig genom den digitala sfären? Vi är tillgängliga för att besvara dina frågor, erbjuda vägledning eller dela med oss av mer detaljer om vår arbetsmetodik. Vänligen skicka oss en e-post, och vi kommer att ta kontakt med dig inom kort! </p>
                          <h5 class="text__heading_sm-sc-1xracbr-5 contactFormContentstyle__SubHeader-sc-1wvwxzl-5 iehGeS ijChgB">Send an Email</h5>
-                         <form id="yourForm" class="contactFormContentstyle__FormWrapper-sc-1wvwxzl-12 iiTQIG">
-                           <div class="contactFormContentstyle__FormColumn-sc-1wvwxzl-13 eqgEDi">
-                             <input type="text" placeholder="Namn*" value="" class="contactFormContentstyle__Input-sc-1wvwxzl-16 kkaabq" name="name" required />
-                             <div class="error-message" id="nameError"></div>
-                             <input type="email" placeholder="E-post*" value="" class="contactFormContentstyle__Input-sc-1wvwxzl-16 kkaabq" name="email" required />
-                             <div class="error-message" id="emailError"></div>
-                             <input type="tel" placeholder="Telefonnummer" value="" class="contactFormContentstyle__Input-sc-1wvwxzl-16 kkaabq" name="phoneNumber" />
-                             <input type="text" placeholder="Jobbtitel" value="" class="contactFormContentstyle__Input-sc-1wvwxzl-16 kkaabq" name="jobTitle" />
-                           </div>
-                           <div class="contactFormContentstyle__FormColumn-sc-1wvwxzl-13 eqgEDi">
-                             <textarea placeholder="Meddelande" class="contactFormContentstyle__InputField-sc-1wvwxzl-17 jLiNwd" name="message"></textarea>
-                             <div class="error-message" id="messageError"></div>
-                             <p class="text__paragraph_small-sc-1xracbr-9 contactFormContentstyle__InputLabel-sc-1wvwxzl-18 ksIOdr jLQVVy">
-                               <input type="checkbox" class="contactFormContentstyle__InputCheckbox-sc-1wvwxzl-19 cSaYma" name="checkbox" required />Jag godkänner villkoren i pasver:s
-                               <a href="../../privacy-cookie-policy/index.html" class="contactFormContentstyle__GdprLink-sc-1wvwxzl-20 ildqRY">personuppgiftspolicy.</a>
-                             </p>
-                             <button type="button" onclick="submitForm()" class="contactFormContentstyle__SubmitButton-sc-1wvwxzl-21 gLuJmm" >Skicka</button>
-                             <p id="successMessage" style="display: none; color: green; margin-top: 10px; font-weight: bold;">Tack för ditt meddelande! Vi återkommer snart.</p>
-                           </div>
-                         </form>
+                         <form action='' id="yourForm2" class="contactFormContentstyle__FormWrapper-sc-1wvwxzl-12 iiTQIG" data-gtm-form-interact-id="0">
+                           <div id="errorFrom"></div>
+                         <div class="contactFormContentstyle__FormColumn-sc-1wvwxzl-13 eqgEDi">
+                           <input type="text" placeholder="Namn*" value="" class="contactFormContentstyle__Input-sc-1wvwxzl-16 kkaabq" name="name" required="" data-gtm-form-interact-field-id="0">
+                           <div class="error-message" id="nameError"></div>
+                           <input type="email" placeholder="E-post*" value="" class="contactFormContentstyle__Input-sc-1wvwxzl-16 kkaabq" name="email" required="" data-gtm-form-interact-field-id="1">
+                           <div class="error-message" id="emailError"></div>
+                           <input type="tel" placeholder="Telefonnummer" value="" class="contactFormContentstyle__Input-sc-1wvwxzl-16 kkaabq" name="phoneNumber" data-gtm-form-interact-field-id="2">
+                           <input type="text" placeholder="Jobbtitel" value="" class="contactFormContentstyle__Input-sc-1wvwxzl-16 kkaabq" name="jobTitle" data-gtm-form-interact-field-id="3">
+                         </div>
+                         <div class="contactFormContentstyle__FormColumn-sc-1wvwxzl-13 eqgEDi">
+                           <textarea placeholder="Meddelande" class="contactFormContentstyle__InputField-sc-1wvwxzl-17 jLiNwd" name="message" data-gtm-form-interact-field-id="4"></textarea>
+                           <div class="error-message" id="messageError"></div>
+                           <button type="submit" class="contactFormContentstyle__SubmitButton-sc-1wvwxzl-21 gLuJmm">Skicka</button>
+                           <p id="successMessage" class="successMessage" style="color: green; margin-top: 10px; font-weight: bold;"></p>
+                         </div>
+                       </form>
                        </div>
                        <div class="contactFormContentstyle__Contact-sc-1wvwxzl-6 jOBgVe">
                          <img src="/Images/pic.jpg" alt="" class="contactFormContentstyle__Image-sc-1wvwxzl-7 gFpHiR" />
